src/mlops/week_show/nohup.out
  File "week_show.py", line 17
    def job():
    ^
IndentationError: unexpected indent
